--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -24,11 +24,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - name: Build
-      run: |
-        cd frontend
-        npm install
-        npm run build
+    - run: cd frontend
+    - run: npm ci
+    - run: npm run build
         
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.5
