--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -24,12 +24,14 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - run: cd frontend
-    - run: npm ci
-    - run: npm run build
+    - name: Build
+      run: |
+        npm ci
+        npm run build
+      working-directory: ./frontend
         
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
-        branch: gh-pages # The branch the action should deploy to.
-        folder: server # The folder the action should deploy.
+        branch: gh-pages
+        folder: server
